--- a/src/moviewatch/templates/index.html
+++ b/src/moviewatch/templates/index.html
@@ -3,19 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Movie-Watch</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Movie List</h1>
+    <h1 style="padding: 50px;">Welcome to movie watchlist home</h1>
+    <a href="{% url 'movie_list' %}" style="text-decoration: none;"><h2 style="padding: 50px">List of added movies</h2></a>
+    <a href="{% url 'movie_add' %}" style="text-decoration: none;"><h2 style="padding: 50px;">Add a movie</h2></a>
 
- 
-    {% for movie_item in movie %}
-    <li><a href="#">{{movie_item.title}}</a></li>
-    {% endfor %}
-    <a href="{% url 'movie_add' %}">Add</a>
-    ###
-    display only movies that have been watched using a tag.
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
