--- a/src/moviewatch/templates/movie_confirm_delete.html
+++ b/src/moviewatch/templates/movie_confirm_delete.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <h1>Movie List</h1>
-
- 
-    {% for movie_item in movie %}
-    <li><a href="#">{{movie_item.title}}</a></li>
-    {% endfor %}
-    <a href="{% url 'movie_add' %}">Add</a>
+    <h2>Are you sure you want to delete "{{ movie.title }}"?</h2>
+    <form method="post">
+      {% csrf_token %}
+      <button type="submit">Confirm</button>
+      <a href="{% url 'movie_list' %}">Cancel</a>
+    </form>
     ###
     display only movies that have been watched using a tag.
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
