--- a/src/moviewatch/templates/movie_detail.html
+++ b/src/moviewatch/templates/movie_detail.html
@@ -8,12 +8,17 @@
   </head>
   <body>
     <h1>Movie List</h1>
+    <h2>{{ movie.title }}</h2>
+      <p><strong>Director:</strong> {{ movie.director }}</p>
+      <p><strong>Release Date:</strong> {{ movie.release_date }}</p>
+      <p><strong>Genre:</strong> {{ movie.genre }}</p>
+      <p><strong>Rating:</strong> {{ movie.rating }}</p>
+
+      <a href="{% url 'movie_edit' movie.pk %}">Edit</a> |
+      <a href="{% url 'movie_delete' movie.pk %}">Delete</a>
 
  
-    {% for movie_item in movie %}
-    <li><a href="#">{{movie_item.title}}</a></li>
-    {% endfor %}
-    <a href="{% url 'movie_add' %}">Add</a>
+
     ###
     display only movies that have been watched using a tag.
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
