--- a/src/moviewatch/templates/movie_form.html
+++ b/src/moviewatch/templates/movie_form.html
@@ -7,15 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Movie List</h1>
+    <h1>Add a movie</h1>
 
- 
-    {% for movie_item in movie %}
-    <li><a href="#">{{movie_item.title}}</a></li>
-    {% endfor %}
-    <a href="{% url 'movie_add' %}">Add</a>
-    ###
-    display only movies that have been watched using a tag.
+    <form method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit">Save</button>
+    </form>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
