--- a/src/moviewatch/templates/movie_list.html
+++ b/src/moviewatch/templates/movie_list.html
@@ -11,11 +11,10 @@
 
  
     {% for movie_item in movie %}
-    <li><a href="#">{{movie_item.title}}</a></li>
+    <li><a href="{% url 'movie_detail' movie_item.pk %}">{{movie_item.title}}</a></li>
     {% endfor %}
     <a href="{% url 'movie_add' %}">Add</a>
-    ###
-    display only movies that have been watched using a tag.
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
